Acc 96.7% , learning rate = 0.0005

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,27 +82,6 @@
     "    return filtfilt(b, a, data)\n",
     "\n",
     "# Preprocessing Function\n",
-    "\n",
-    "# def preprocess_signal(signal, fs=173.61, segment_length=None):\n",
-    "#     # Bandpass Filter\n",
-    "#     filtered = bandpass_filter(signal, 0.5, 50, fs)\n",
-    "#     # Segmentation\n",
-    "#     if segment_length is None:\n",
-    "#         segment_length = int(5 * fs)  # 5-second default\n",
-    "#     segments = []\n",
-    "#     for start in range(0, len(filtered), segment_length):\n",
-    "#         end = start + segment_length\n",
-    "#         if end <= len(filtered):\n",
-    "#             segments.append(filtered[start:end])\n",
-    "#     segments = np.array(segments)  # shape = (num_segments, segment_length)\n",
-    "\n",
-    "#     # Normalization (Min–Max per segment)\n",
-    "#     scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "#     normed_segments = np.zeros_like(segments)\n",
-    "#     for i in range(segments.shape[0]):\n",
-    "#         normed_segments[i] = scaler.fit_transform(segments[i].reshape(-1, 1)).flatten()\n",
-    "\n",
-    "#     return normed_segments, filtered\n",
     "\n",
     "def preprocess_signal(signal, fs=173.61):\n",
     "    # 1) Bandpass Filter\n",
@@ -233,8 +212,15 @@
     "    unique, counts = np.unique(y, return_counts=True)\n",
     "    print(\"\\nClass Counts:\")\n",
     "    for cls, cnt in zip(unique, counts):\n",
-    "        print(f\"{cls}: {cnt}\")\n"
+    "        print(f\"{cls}: {cnt}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
