--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +69,6 @@
     "from scipy.signal import butter, filtfilt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from scipy.io import savemat\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "# Bandpass Filter\n",
     "\n",
@@ -83,31 +80,90 @@
     "\n",
     "# Preprocessing Function\n",
     "\n",
-    "def preprocess_signal(signal, fs=173.61):\n",
-    "    # 1) Bandpass Filter\n",
+    "def preprocess_signal(signal, fs=173.61, segment_length=None):\n",
+    "    # Bandpass Filter\n",
     "    filtered = bandpass_filter(signal, 0.5, 50, fs)\n",
     "\n",
-    "    # 2) Windowing: 2 sec with 50% overlap\n",
-    "    window_length = int(2 * fs)       # 2 seconds → 347 samples\n",
-    "    step = window_length // 2         # 50% overlap → 173 samples\n",
-    "\n",
+    "        # Segmentation WITH OVERLAP\n",
+    "    if segment_length is None:\n",
+    "        segment_length = int(2 * fs)  # 5-second segments = 868 samples\n",
+    "    \n",
+    "    step_size = int(segment_length * (1 - 0.5))  # 50% overlap = 434 samples\n",
+    "    \n",
     "    segments = []\n",
-    "    for start in range(0, len(filtered) - window_length + 1, step):\n",
-    "        segment = filtered[start : start + window_length]\n",
-    "        segments.append(segment)\n",
+    "    for start in range(0, len(filtered) - segment_length + 1, step_size):\n",
+    "        end = start + segment_length\n",
+    "        segments.append(filtered[start:end])\n",
+    "    \n",
+    "    segments = np.array(segments)\n",
     "\n",
-    "    segments = np.array(segments)  # shape: (num_segments, window_length)\n",
-    "\n",
-    "    # 3) Min–Max Normalization per window\n",
-    "    scaler = MinMaxScaler(feature_range=(-1, 1))\n",
+    "    # Normalization (Min–Max per segment)\n",
+    "    # scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "    # normed_segments = np.zeros_like(segments)\n",
+    "    # for i in range(segments.shape[0]):\n",
+    "    #     normed_segments[i] = scaler.fit_transform(segments[i].reshape(-1, 1)).flatten()\n",
+    "    \n",
+    "    # ✅ Z-score normalization (per segment)\n",
     "    normed_segments = np.zeros_like(segments)\n",
-    "\n",
     "    for i in range(segments.shape[0]):\n",
-    "        normed_segments[i] = scaler.fit_transform(\n",
-    "            segments[i].reshape(-1, 1)\n",
-    "        ).flatten()\n",
+    "        mean = segments[i].mean()\n",
+    "        std = segments[i].std()\n",
+    "        if std > 0:  # Avoid division by zero\n",
+    "            normed_segments[i] = (segments[i] - mean) / std\n",
+    "        else:\n",
+    "            normed_segments[i] = segments[i] - mean  # Just center if std=0\n",
     "\n",
-    "    return normed_segments, filtered\n",
+    "    return normed_segments, filtered, segments\n",
+    "\n",
+    "\n",
+    "def plot_segmentation_detailed(filtered, segments, fs=173.61, segment_length=None, filename=\"\"):\n",
+    "   \n",
+    "    if segment_length is None:\n",
+    "        segment_length = int(5 * fs)\n",
+    "    \n",
+    "    num_segments = len(segments)\n",
+    "    \n",
+    "    # Create figure\n",
+    "    fig, ax = plt.subplots(figsize=(14, 5))\n",
+    "    \n",
+    "    # Plot the full filtered signal\n",
+    "    time = np.arange(len(filtered)) / fs\n",
+    "    ax.plot(time, filtered, 'b-', linewidth=0.8, alpha=0.7)\n",
+    "    \n",
+    "    # Add vertical lines to show segment boundaries\n",
+    "    for i in range(num_segments + 1):\n",
+    "        segment_time = i * segment_length / fs\n",
+    "        ax.axvline(x=segment_time, color='red', linestyle='--', \n",
+    "                   linewidth=2, alpha=0.8, label='Segment boundary' if i == 0 else '')\n",
+    "    \n",
+    "    # Shade different segments with alternating colors\n",
+    "    for i in range(num_segments):\n",
+    "        start_time = i * segment_length / fs\n",
+    "        end_time = (i + 1) * segment_length / fs\n",
+    "        color = 'yellow' if i % 2 == 0 else 'lightgreen'\n",
+    "        ax.axvspan(start_time, end_time, alpha=0.2, color=color)\n",
+    "        # Add segment labels\n",
+    "        mid_time = (start_time + end_time) / 2\n",
+    "        ax.text(mid_time, ax.get_ylim()[1] * 0.9, f'Seg {i+1}', \n",
+    "                ha='center', fontsize=10, fontweight='bold')\n",
+    "    \n",
+    "    ax.set_xlabel('Time (seconds)', fontsize=12)\n",
+    "    ax.set_ylabel('Amplitude', fontsize=12)\n",
+    "    \n",
+    "    title = f'Full Signal with Segmentation Boundaries'\n",
+    "    if filename:\n",
+    "        title += f' ({filename})'\n",
+    "    title += f'\\nTotal Length: {len(filtered)} samples ({len(filtered)/fs:.2f} sec) | '\n",
+    "    title += f'Segment Length: {segment_length} samples ({segment_length/fs:.2f} sec) | '\n",
+    "    title += f'Number of Segments: {num_segments}'\n",
+    "    \n",
+    "    ax.set_title(title, fontsize=13, fontweight='bold')\n",
+    "    ax.legend(loc='upper right')\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
     "\n",
     "# Load & Preprocess Dataset\n",
     "\n",
@@ -134,24 +190,64 @@
     "        for i, file in enumerate(files):\n",
     "            try:\n",
     "                data = np.loadtxt(file)\n",
-    "                normed_segments, filtered = preprocess_signal(data)\n",
+    "                normed_segments, filtered, segments = preprocess_signal(data)\n",
     "\n",
     "                # Plot one example\n",
     "                if plot_example and not plotted:\n",
-    "                    plt.figure(figsize=(12, 6))\n",
-    "                    plt.subplot(2, 1, 1)\n",
-    "                    plt.plot(data[:500])\n",
-    "                    plt.title(f\"Raw Signal Example ({os.path.basename(file)})\")\n",
-    "                    plt.xlabel(\"Samples\")\n",
-    "                    plt.ylabel(\"Amplitude\")\n",
-    "\n",
-    "                    plt.subplot(2, 1, 2)\n",
-    "                    plt.plot(normed_segments[0][:500])\n",
-    "                    plt.title(\"Filtered + Normalized Segment Example\")\n",
+    "                    # 1. Raw Signal\n",
+    "                    plt.figure(figsize=(12, 4))\n",
+    "                    plt.plot(data[:250])\n",
+    "                    plt.title(f\"Raw Signal ({os.path.basename(file)})\")\n",
     "                    plt.xlabel(\"Samples\")\n",
     "                    plt.ylabel(\"Amplitude\")\n",
     "                    plt.tight_layout()\n",
     "                    plt.show()\n",
+    "\n",
+    "                    # 2. After Bandpass Filter (first 250 samples)\n",
+    "                    plt.figure(figsize=(12, 4))\n",
+    "                    plt.plot(filtered[:250])\n",
+    "                    plt.title(\"After Bandpass Filter\")\n",
+    "                    plt.xlabel(\"Samples\")\n",
+    "                    plt.ylabel(\"Amplitude\")\n",
+    "                    plt.tight_layout()\n",
+    "                    plt.show()\n",
+    "\n",
+    "                    # 3. Full Filtered Signal BEFORE Segmentation (NEW)\n",
+    "                    plt.figure(figsize=(14, 5))\n",
+    "                    time_full = np.arange(len(filtered)) / 173.61\n",
+    "                    plt.plot(time_full, filtered, 'b-', linewidth=0.8, alpha=0.8)\n",
+    "                    plt.xlabel('Time (seconds)', fontsize=12)\n",
+    "                    plt.ylabel('Amplitude', fontsize=12)\n",
+    "                    plt.title(f'Full Signal without Segmentation Boundaries ({os.path.basename(file)})\\n' +\n",
+    "                             f'Total Length: {len(filtered)} samples ({len(filtered)/173.61:.2f} sec)',\n",
+    "                             fontsize=13, fontweight='bold')\n",
+    "                    plt.grid(True, alpha=0.3)\n",
+    "                    plt.tight_layout()\n",
+    "                    plt.show()\n",
+    "\n",
+    "                    # 4. Detailed Segmentation Visualization AFTER Segmentation\n",
+    "                    plot_segmentation_detailed(filtered, segments, \n",
+    "                                             fs=173.61, \n",
+    "                                             segment_length=int(5*173.61),\n",
+    "                                             filename=os.path.basename(file))\n",
+    "\n",
+    "\n",
+    "                    plt.figure(figsize=(12, 4))\n",
+    "                    plt.plot(segments[0])\n",
+    "                    plt.title(\"Before Normalization (First Segment)\")\n",
+    "                    plt.xlabel(\"Samples\")\n",
+    "                    plt.ylabel(\"Amplitude\")\n",
+    "                    plt.tight_layout()\n",
+    "                    plt.show()\n",
+    "                    # 5. After Normalization (First Segment)\n",
+    "                    plt.figure(figsize=(12, 4))\n",
+    "                    plt.plot(normed_segments[0])\n",
+    "                    plt.title(\"After Normalization (First Segment)\")\n",
+    "                    plt.xlabel(\"Samples\")\n",
+    "                    plt.ylabel(\"Amplitude\")\n",
+    "                    plt.tight_layout()\n",
+    "                    plt.show()\n",
+    "                    \n",
     "                    plotted = True\n",
     "\n",
     "                class_segments.append(normed_segments)\n",
@@ -193,26 +289,13 @@
     "\n",
     "    return X, y\n",
     "\n",
+    "# Main\n",
     "if __name__ == \"__main__\":\n",
-    "    root = r\"C:\\Users\\pc\\Desktop\\Graduation Project\\GP-Epileptic-seizures\"\n",
+    "    root = r\"D:\\GP\\GP-Epileptic-seizures\"  # Path containing Z, O, N, F, S folders\n",
     "    save_dir = os.path.join(root, \"preprocessed\")\n",
     "\n",
     "    X, y = load_and_preprocess_bonn(root, save_dir, plot_example=True)\n",
-    "    print(\"Preprocessing complete!\")\n",
-    "\n",
-    "   \n",
-    "    plt.figure(figsize=(6,4))\n",
-    "    sns.countplot(x=y)\n",
-    "    plt.title(\"Class Distribution\")\n",
-    "    plt.xlabel(\"Class\")\n",
-    "    plt.ylabel(\"Count\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    # Optional: print exact numbers\n",
-    "    unique, counts = np.unique(y, return_counts=True)\n",
-    "    print(\"\\nClass Counts:\")\n",
-    "    for cls, cnt in zip(unique, counts):\n",
-    "        print(f\"{cls}: {cnt}\")"
+    "    print(\"Preprocessing complete!\")"
    ]
   },
   {
