--- a/CNN_Model.ipynb
+++ b/CNN_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4718b6a1",
    "metadata": {},
    "outputs": [
@@ -833,12 +833,12 @@
     "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import Input, Conv1D, Dense, Dropout, BatchNormalization, MaxPooling1D, GlobalAveragePooling1D, LeakyReLU\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "import tensorflow.keras.backend as K\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
+    "from tensorflow.keras.layers import Input, Conv1D, Dense, Dropout, BatchNormalization, MaxPooling1D, GlobalAveragePooling1D, LeakyReLU # type: ignore\n",
+    "from tensorflow.keras.optimizers import Adam # type: ignore\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint # type: ignore\n",
+    "from tensorflow.keras.utils import to_categorical # type: ignore\n",
+    "import tensorflow.keras.backend as K # type: ignore\n",
     "\n",
     "# ===================== GPU SETUP =====================\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e48d9036",
    "metadata": {},
    "outputs": [
@@ -1539,13 +1539,13 @@
     "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import (\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
+    "from tensorflow.keras.layers import ( # type: ignore\n",
     "    Input, Conv1D, Dense, Dropout, BatchNormalization,\n",
     "    MaxPooling1D, GlobalAveragePooling1D, Add, Activation\n",
     ")\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
-    "from tensorflow.keras.optimizers import AdamW\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint # type: ignore\n",
+    "from tensorflow.keras.optimizers import AdamW # type: ignore\n",
     "\n",
     "# =============================================================\n",
     "#                 DEVICE INFO\n",
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "359dee6a",
    "metadata": {},
    "outputs": [
@@ -2429,13 +2429,13 @@
     "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import (\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
+    "from tensorflow.keras.layers import ( # type: ignore\n",
     "    Input, Conv1D, Dense, Dropout, BatchNormalization,\n",
     "    MaxPooling1D, GlobalAveragePooling1D, Activation\n",
     ")\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
+    "from tensorflow.keras.optimizers import Adam # pyright: ignore[reportMissingImports]\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint # type: ignore\n",
     "\n",
     "# =============================================================\n",
     "#                    PATHS\n",
